--- a/FP11.tex
+++ b/FP11.tex
@@ -15,9 +15,10 @@ Tutor: ???}
 \begin{document}
 \maketitle
 \section{Einführung}
-In diesem Versuch werden die Grundlagen des Transmissionselektronenmikroskops (TEM) vermittelt. Dabei werden nach einer grundlegenden Justierung die Beugungsbilder im Hellfeld und Dunkelfeld an einer GaAs-Probe aufgenommen und indiziert. Durch Aufnahmen von InGaAs-Quantentrögen wird anschließend einerseits über die Intensitätsverteilung und andererseits über die Gitterkonstanten die Indiumkonzentration bestimmt.
+
 
 \section{Theoretische Grundlagen}
+blabaodljaljdow
 	
 \section{Versuchsaufbau und Versuchsdurchführung}
 
