--- a/FP11.tex
+++ b/FP11.tex
@@ -23,7 +23,14 @@ Transmissionselektronenmikroskope erreichen eine Auflösung die im Sub-\(\mathrm
 \lambda = \frac{h}{\sqrt{2m_\mathrm{0}eV(\frac{1+eV}{2m_\mathrm{0}c^2})}}
 \end{align}
 Mit \(h\) dem planck'schen Wirkungsquantum, \(m_\mathrm{0}\) der Ruhemasse des Elektrons, \(c\) der Lichgeschwindigkeit und \(eV\) der Energie des Elektrons in Elektronenvolt.
-Die
+Zwei Bildgebungsarten sich möglich. Das erste ist das Beugungsbild, hier wird das reziproke Gitter des Kristalls abgebildet. Das zweite ist das Realbild (Abb. \ref{Strahlengang}).
+\begin{figure}[H]
+\center
+\includegraphics[width=\textwidth]{Strahlengang.png}
+\caption{Schematische und vereinfachte Darstellung des Strahlenganges zur Entstehung der zwei Bildarten. Realbilder bei BB' und CC'. Beugungsbilder bei DD' und EE'.}
+\label{Strahlengang}
+\end{figure}
+
 	
 \section{Versuchsaufbau und Versuchsdurchführung}
 
