--- a/FP11.tex
+++ b/FP11.tex
@@ -99,13 +99,36 @@ Zudem liegt der Reflex (022) in diesem Fall ebenfalls auf dem Lauekreis. Indem m
 	[.32\linewidth]{\includegraphics[width=0.32\textwidth]{Versuchsdaten/10/004-dunkel.jpg}}
 	\subcaptionbox{Dunkelfeldaufnahme mit Reflex (022\label{dunkel022}}
 	[.32\linewidth]{\includegraphics[width=0.32\textwidth]{Versuchsdaten/10/022-dunkel.jpg}}
-	\caption{Aufnahmen} \label{dunkelhell}
+	\caption{Aufnahmen der InGaAs Quantentröge} \label{dunkelhell}
 \end{figure}
 
 Zum Vergleich ist in Abb. \ref{hell} eine Hellfeldaufnahme der Probenstelle zu sehen. In den Abb. \ref{dunkel004} und \ref{dunkel022} sind zwei Dunkelfeldaufnahmen zu sehen, die mit unterschiedlichen Reflexen erstellt wurden. \\
 In der Hellfeldaufnahme sind die InGaAs Quantentröge nicht sehr gut von dem umgebenen GaAs zu unterscheiden. Hierbei bieten die Dunkelfeldaufnahmen Vorteile. Da InGaAs eine andere Gitterkonstante besitzt als GaAs, sind die Reflexe nicht am gleichen Ort im Beugungsbild, sodass die InGaAs Schichten deutlich dunkler im Bild zu sehen sind. Dieser Effekt ist sowohl beim Reflex (022) als auch beim Reflex (004) zu erkennen. \\
 Es sind außerdem Bereiche auf den Dunkelfeldaufnahmen zu sehen, die ebenfalls dunkel erscheinen und keine Einzelheiten mehr erkennen lassen. Dies könnten Bereiche sein, in denen die Probe eine unterschiedliche Kristallorientierung besitzen und dadurch der jeweilige Reflex verschoben oder schwächer ausgeprägt ist. \\
 
+\begin{figure}[htb]\centering
+	\subcaptionbox{34000-fache Vergrößerung\label{34k}}
+	[.49\linewidth]{\includegraphics[width=0.49\textwidth]{Versuchsdaten/11/34000x.jpg}}
+	\subcaptionbox{87000-fache Vergrößerung\label{87k}}
+	[.49\linewidth]{\includegraphics[width=0.49\textwidth]{Versuchsdaten/11/87000x.jpg}}\\
+	\subcaptionbox{185000-fache Vergrößerung\label{185k}}
+	[.49\linewidth]{\includegraphics[width=0.49\textwidth]{Versuchsdaten/11/185000x.jpg}}
+	\subcaptionbox{380000-fache Vergrößerung\label{380k}}
+	[.49\linewidth]{\includegraphics[width=0.49\textwidth]{Versuchsdaten/11/380000x.jpg}}
+	\caption{(020) Dunkelfeldaufnahmen der InGaAs-Quantentröge mit unterschiedlichen Vergrößerungen} \label{*}
+\end{figure}
+
+\begin{figure}[htb]\centering
+	\subcaptionbox{34000-fache Vergrößerung\label{34kaus}}
+	[.49\linewidth]{\includegraphics[width=0.49\textwidth]{Versuchsdaten/11/34000xausschnitt.png}}
+	\subcaptionbox{87000-fache Vergrößerung\label{87kaus}}
+	[.49\linewidth]{\includegraphics[width=0.49\textwidth]{Versuchsdaten/11/87000xausschnitt.png}}\\
+	\subcaptionbox{185000-fache Vergrößerung\label{185kaus}}
+	[.49\linewidth]{\includegraphics[width=0.49\textwidth]{Versuchsdaten/11/185000xausschnitt.png}}
+	\subcaptionbox{380000-fache Vergrößerung\label{380kaus}}
+	[.49\linewidth]{\includegraphics[width=0.49\textwidth]{Versuchsdaten/11/380000xausschnitt.png}}
+	\caption{Indiumgehalt der Ausschnitte im Querschnitt} \label{ausschnitte}
+\end{figure}
 
 \section{Zusammenfassung}
 
