--- a/FP11.tex
+++ b/FP11.tex
@@ -115,8 +115,10 @@ Es sind außerdem Bereiche auf den Dunkelfeldaufnahmen zu sehen, die ebenfalls d
 	[.49\linewidth]{\includegraphics[width=0.49\textwidth]{Versuchsdaten/11/185000x.jpg}}
 	\subcaptionbox{380000-fache Vergrößerung\label{380k}}
 	[.49\linewidth]{\includegraphics[width=0.49\textwidth]{Versuchsdaten/11/380000x.jpg}}
-	\caption{(020) Dunkelfeldaufnahmen der InGaAs-Quantentröge mit unterschiedlichen Vergrößerungen} \label{*}
+	\caption{(020) Dunkelfeldaufnahmen der InGaAs-Quantentröge mit unterschiedlichen Vergrößerungen} \label{trogdunkel}
 \end{figure}
+
+In Abb. \ref{trogdunkel} sind (020) Dunkelfeldaufnahmen der InGaAs-Quantentröge zu sehen. Da die InGaAs-Schichten den Reflex (020) nicht am gleichen Ort, wie GaAs besitzt, erscheinen die Quantentröge mit einer sehr viel schwächeren Intensität, sodass sie schwarz aussehen.
 
 \begin{figure}[htb]\centering
 	\subcaptionbox{34000-fache Vergrößerung\label{34kaus}}
@@ -127,8 +129,49 @@ Es sind außerdem Bereiche auf den Dunkelfeldaufnahmen zu sehen, die ebenfalls d
 	[.49\linewidth]{\includegraphics[width=0.49\textwidth]{Versuchsdaten/11/185000xausschnitt.png}}
 	\subcaptionbox{380000-fache Vergrößerung\label{380kaus}}
 	[.49\linewidth]{\includegraphics[width=0.49\textwidth]{Versuchsdaten/11/380000xausschnitt.png}}
-	\caption{Indiumgehalt der Ausschnitte im Querschnitt} \label{ausschnitte}
+	\caption{Indiumgehalt der Ausschnitte im Querschnitt} \label{indprofil}
 \end{figure}
+
+Aus den Aufnahmen in Abb. \ref{trogdunkel} sind Intensitätsprofile über den Querschnitt senkrecht zu den Quantentrögen erstellt worden. Da die Intensität vom Indiumgehalt abhängt, konnte der Indiumgehalt über dem Querschnitt dargestellt werden. Die Ergebnisse sind in Abb. \ref{indprofil} dargestellt. \\
+Außerhalb der Quantentröge wurde hierfür der Indium Gehalt innerhalb der GaAs-Schichten als 0 angenommen. Auf diesen Intensitätswert wurde der Rest des Intensitätprofils normiert. Da die Intensiät quadratisch vom (020) Strukturfaktor abhängt, konnte aus dem Strukturfaktor $F$ abhängig vom Indiumgehalt $x$ der Indiumgehalt in Abhängigkeit von der Intensität $I$ besitmmt werden. Aus der gegebenen Abhängigkeit wurde abgelesen:
+\begin{align*}
+	F = 0,95x - 0,15 \\
+	I = F^2 = (0,95x - 0,15)^2 
+\end{align*}
+
+Die Intensität besitzt also bei keinem Indiumgehalt den Wert 0,0225. Da das Intensitätsprofil auf diese Stelle normiert wurde, wird auch die Intensität normiert und nach x umgestellt:
+
+\begin{align*}
+	I_{norm} = (0,95x - 0,15)^2 / 0,0225
+	x = \frac{\sqrt{I_{norm}\cdot 0,0225}+0,15}{0,95}
+\end{align*}
+
+Mit dieser Gleichung konnten die normierten Intensitätsprofile zu Indiumgehaltsprofilen umgerechnet werden. \\
+Zuletzt wurde der Indiumgehalt zusätzlich mithilfe eines Hochauflösungs-TEM Bildes bestimmt. Hierbei wurde keine Dunkelfeldaufnahme verwendet, um die Intensitäten zu bestimmen, sondern stattdessen die Gitterkonstanten aus den Atomabständen bestimmt. Aus der Abhängigkeit der Gitterkonstante $a$ vom Indiumgehalt, konnte der Indiumgehalt von der Gitterkonstante abhängig gemacht werden. \\
+
+\begin{figure}[htb]\centering
+	\subcaptionbox{Hochauflösungs-TEM Bild\label{hochtem}}
+	[.49\linewidth]{\includegraphics[width=0.49\textwidth]{Versuchsdaten/13/good_data/Frame3.jpg}}
+	\subcaptionbox{Gefiltertes Bild zur Bestimmung von der Gitterkonstante\label{filthoch}}
+	[.49\linewidth]{\includegraphics[width=0.49\textwidth]{Versuchsdaten/13/good_data/Frame3_rotated_and_filtered.jpg}}\\
+	\caption{Hochauflösungs-TEM Bilder von InGaAs-Quantentrögen} \label{hoch}
+\end{figure}
+
+Das Hochauflösungs-TEM Bild ist in Abb. \ref{hochtem} zu sehen. Da im Versuch selbst kein verwendbares Hochauflösungsbild erstellt werden konnte, wurde ein passendes Ergebnis aus älteren Versuchen zur Verfügung gestellt. In Abb. \ref{filthoch} wurden mit der DALI (Digital Analysis of Lattice Images) Software die Netzebenenabstände vermessen und daraus ein Profil der Gitterverzerrung durch den Quantentrog erstellt. \\
+Mit der gegebenen Abhängigkeit zwischen Gitterkonstante und Indiumgehalt konnte daraus mit folgender Umrechnung ein Profil des Indiumgehalts erstellt werden, welches in Abb. \ref{hochindium} dargestellt ist:
+
+\begin{align*}
+	(x-1) / 0.0718
+\end{align*}
+
+\begin{figure}[h]\centering
+	\includegraphics[width=0.65\textwidth]{Versuchsdaten/13/Graph01.png}
+\label{hochindium}
+\caption{Profil des Indiumgehaltes, bestimmt durch die Gitterverzerrung}
+\end{figure}
+
+
+
 
 \section{Zusammenfassung}
 
