--- a/FP11.tex
+++ b/FP11.tex
@@ -10,8 +10,8 @@
 
 \title{Transmissions-Elektronen-Mikroskopie}
 \author{Adrian Messow, Sven Mehrkens \\
-Tutor: ???}
-\date{Durchführung: 14.12.2017 \\ Abgabe: ??? }
+Tutor: Thorsten Mehrtens}
+\date{Durchführung: 14.12.2017 \\ Abgabe: 17.01.2018 }
 
 \begin{document}
 
@@ -48,6 +48,8 @@ Eine anschauliche Verdeutlichung des Bragg-Gesetzes ist die Ewald-Kugel (Abb. \r
 \caption{Konstruktion der Ewaldkugel im reziproken Kristallgitter.}
 \label{ewald}
 \end{figure}
+\\
+Da selbst die elektromagnetischen Linsen keine perfekten Linsen sind, treten auch hier Fehler auf. Dies sind die sphärischen Aberration, die chromatische Aberration und der Linsenastigmatismus. Die sphärische Aberration ist ein Phänomen bei dem die Strahlen, die am Rand der Linse auftreffen weiter entfernt fokussiert werden, als Strahlen, die auf die Mitte der Linse treffen. Dieser Fehler wird in neueren TEM's durch Mulitpolkorrektoren zu kleineren Werten korrigiert. Die Chromatische Aberration beschreibt die unterschiedliche Fokussierung von Elektronen mit unterschiedlichen Energien, oder Wellenlängen. Da die aus dem Fillament beschleunigten Elektronen nicht alle mit einer konstanden Energie austreten, sondern durch thermische Effekte einer gewissen Schwankung unterliegen, werden auch diese Elektronen unterschieldich fokussiert. Der letzte signifikante Fehler ist der Linsenastigmatismus bei dem die Linse in x-Richtung und y-Richtung unterschiedlich stark fokussieren. Die Folge ist ein elliptischer und nicht kreisförmiger Elektronenstrahl.
 	
 \section{Versuchsaufbau und Versuchsdurchführung}
 Bei dem verwendeten Transmissionselektronenmikroskop handelt es sich um ein Titan 80/300. Es wird verwendet um an einer InGaAs/GaAs-Probe Beugungs- und Realbilder aufzunehmen. Die Probe wurde im FIB präpariert und auf eine Dicke von wenigen Nanometern geschnitten. Im TEM werden in einer Kathode Elektronen freigesetzt und mittels einer an die Lochanode angelegte Spannung von \(300\,\mathrm{kV}\) beschleunigt (Abb \ref{TEM}). Über ein System aus elektromagnetische Linsen werden die Elektronen auf die Probe fokussiert. Dort werden die Elektronen teilweise an den Atomen im Kristallgitter gestreut nach dem Bragg-Gesetz und teilweise reflektiert. Auch werden Elektronen aus den inneren Energieniveaus herausgeschlagen. Wodurch Elektronen aus höheren Energieniveaus in das entstandene Loch zurückfallen und ihre überschüssige Energie als elektromagnetische Strahlung abgeben. Dies ist die charakteristische Röntgenstrahlung und kann auch über ein EDX-System analysiert werden. Dies erlaubt die Bestimmung des Materials.
