--- a/FP11.tex
+++ b/FP11.tex
@@ -46,6 +46,9 @@ Eine anschauliche Verdeutlichung des Bragg-Gesetzes ist die Ewald-Kugel (Abb. \r
 \begin{figure}\center
 \includegraphics[width=0.65\textwidth]{ewald.png}
 \caption{Konstruktion der Ewaldkugel im reziproken Kristallgitter.}
+\begin{flushleft}
+{\footnotesize Quelle: http://www.ammrf.org.au/myscope/tem/background/concepts/imagegeneration/diffraction/\\ewald/, 15.01.2018}
+\end{flushleft}
 \label{ewald}
 \end{figure}
 \\
@@ -54,12 +57,19 @@ Da selbst die elektromagnetischen Linsen keine perfekten Linsen sind, treten auc
 \section{Versuchsaufbau und Versuchsdurchführung}
 Bei dem verwendeten Transmissionselektronenmikroskop handelt es sich um ein Titan 80/300. Es wird verwendet um an einer InGaAs/GaAs-Probe Beugungs- und Realbilder aufzunehmen. Die Probe wurde im FIB präpariert und auf eine Dicke von wenigen Nanometern geschnitten. Im TEM werden in einer Kathode Elektronen freigesetzt und mittels einer an die Lochanode angelegte Spannung von \(300\,\mathrm{kV}\) beschleunigt (Abb \ref{TEM}). Über ein System aus elektromagnetische Linsen werden die Elektronen auf die Probe fokussiert. Dort werden sie teilweise an den Atomen im Kristallgitter gestreut nach dem Bragg-Gesetz und teilweise reflektiert. Auch werden Elektronen aus den inneren Energieniveaus herausgeschlagen. Wodurch Elektronen aus höheren Energieniveaus in das entstandene Loch zurückfallen und ihre überschüssige Energie als elektromagnetische Strahlung abgeben. Dies ist die charakteristische Röntgenstrahlung und kann auch über ein EDX-System analysiert werden. Dies erlaubt die Bestimmung des Materials.
 Die gestreuten Elektronen werden transmittiert und werden wiederum über ein Linsensystem fokussiert. Die Elektronen treffen nun auf einen Beobachtungsschirm, oder eine CCD-Kamera. Über eine weitere Linse wird nun der Strahlengang so gelegt, dass entweder das Beugungsbild, oder das Abbildungsbild zuerkennen ist. Der gesamte Strahlengang befindet sich im Hochvakuum, sodass unerwünschte Wechselwirkungen der Elektronen mit der Luft verhindert werden.
+
 \begin{figure}[H]
 \center
 \includegraphics[width=0.6\textwidth]{tem.png}
 \caption{schematischer Aufbau eines Transmissionselektronenmikroskop. Die aus der Kathode beschleunigten Elektronen werden über mehrere Linsen- und Blendensysteme auf die Probe fokussiert. Nach der Transmission werden die Elektronen erneut auf einen Beobachtunsschirm, oder eine Kamera fokussiert.}
+\begin{footnotesize}
+\begin{flushleft}
+Quelle: Versuchsanleitung FP16: Fortgeschrittenenpraktikum Transmissionselektronenmikroskopie
+\end{flushleft}
+\end{footnotesize}
 \label{TEM}
 \end{figure}
+
 Bevor das Beugungsbild einer Probe aufgenommen werden kann, muss das TEM zuerst justiert werden. Dazu wird der Elektronenstrahl auf das Vakuum fokussiert. Als erstes wird die C2-Blende zentriert, sodass bei einem Vergrößerungswechsel der Strahl in der Mitte des Schirms bleibt. Danach wird der Elektronenstrahl auf eine kreisrunde Form gebracht, da dieser durch den Kondensorastigmatismus zumeist elliptisch ist. Als dritter Schritt wird der Strahl auf die Probenoberfläche fokussiert und anschließend wird das Rotationszentrum durch Verkippen der Probe eingestellt. Nach der Justage werden Beugungsbilder aufgenommen, sowohl in Zonenachse, als auch mit anderen Lauekreiszentren. Danach werden Aufnahmen im Abbildungsmodus gemacht, wobei Hellfeld-, aber auch Dunkelfeldaufnahmen mit den Reflexen (022) und (004) gemacht werden. Auf der InGaAs/GaAs-Probe befinden sich InGaAs-Quantentrögen, von denen Aufnahmen gemacht werden, um im Anschluss einmal über den Gitterabstand und einmal über den Intensitätsverlauf den Indiumgehalt zubestimmen.
 
 \section{Auswertung}
@@ -68,8 +78,8 @@ Es wurde eine GaAs Probe untersucht, die Quantentröge aus InGaAs enthält. Auf 
 
 \begin{figure}[h]\centering
 	\includegraphics[width=0.65\textwidth]{Versuchsdaten/8/indiziert2.png}
-\label{100ind}
 \caption{Beugungsbild auf InGaAs in Zonenache [100]}
+\label{100ind}
 \end{figure}
 
 Die Zonenachse [100] ist dadurch zu erkennen, dass die Intensitäten der Reflexe symmetrisch um den Punkt (000) verteilt sind. Wird die Probe verkippt, bilden sich Lauekreise mit Zentren abseits des Punktes (000), sodass der Punkt (000) immer auf dem Rand des Kreises liegt. Da GaAs ein Kubisches Gitter mit zwei Atomsorten bildet, haben alle Punkte mit ungeraden Laue-Indizes einen Strukturfaktor von 0. Dementsprechend sind die entsprechenden Reflexe auf dem Beugungsbild auch nicht zu erkennen.
@@ -84,22 +94,35 @@ Im Folgenden wurden mehrere Beugungsbilder mit unterschiedlichen Lauekreiszentre
 \end{figure}
 
 In den Abb. \ref{008} und \ref{022} sind diese Beugungsbilder zu sehen. Im Lauekreis um das jeweilige Zentrum herum haben diejenigen Reflexe eine starke Intensität, die die Bragg-Reflexionsbedingung erfüllen. Eine Verschiebung des Lauekreiszentrums entsteht zudem auf unterschiedlichen Probenstellen durch geringe Unebenheiten oder auch durch anders ausgerichtete Kristallebenen erfolgen. \\
+Es sind als Beispiel noch zwei Beugungsbilder mit zufälligen Lauekreiszentren aufgenommen wurden.
+
+\begin{figure}[htb]\centering
+	\subcaptionbox{Lauekreiszentrum (0 0 10)\label{rand}}
+	[.49\linewidth]{\includegraphics[width=0.49\textwidth]{Versuchsdaten/9/RandomTilt.jpg}}
+	\subcaptionbox{Beugungsbild mit sichtbarem zweiten Lauekreis\label{rand1}}
+	[.49\linewidth]{\includegraphics[width=0.49\textwidth]{Versuchsdaten/9/RandomTilt1.jpg}}\\
+	\caption{Zwei Beugungsbilder mit zufälliger Drehung der Probe} \label{rands}
+\end{figure}
+
+Auf diese Weise ist Abb. \ref{rand} entstanden, in der deutlich die intensitätsreicheren Reflexe auf dem Lauekreis zu sehen sind. In Abb. \ref{rand1} ist zudem auch der zweite Lauekreis vor allem oberhalb des (000) Reflexes zu erkennen. \\
 Damit die (004) Netzebenen in Bragg-Reflexionsstellung sind, muss der (004) Reflex im Beugungsbild auf dem Lauekreis liegen. Dies ist im einfachsten Fall beim Lauekreiszentrum (002) gegeben. Zu sehen ist dieser Fall in Abb. \ref{002} zu sehen.
 
-\begin{figure}[h]\centering
+\begin{figure}[H]\centering
 	\includegraphics[width=0.65\textwidth]{Versuchsdaten/9/002.jpg}
-\label{002}
 \caption{Beugungsbild mit Lauekreiszentrum (002)}
+\label{002}
 \end{figure}
+
+\newpage
 
 Zudem liegt der Reflex (022) in diesem Fall ebenfalls auf dem Lauekreis. Indem mit einer kleinen Blende alle Reflexe bis auf einen ausgeblendet werden, konnten im Folgenden Dunkelfeldaufnahmen der Probe gemacht werden.
 
 \begin{figure}[htb]\centering
 	\subcaptionbox{Hellfeldaufnahme\label{hell}}
 	[.32\linewidth]{\includegraphics[width=0.32\textwidth]{Versuchsdaten/10/hell.jpg}}
-	\subcaptionbox{Dunkelfeldaufnahme mit Reflex (004)\label{dunkel004}}
+	\subcaptionbox{Dunkelfeldaufnahme \\Reflex (004)\label{dunkel004}}
 	[.32\linewidth]{\includegraphics[width=0.32\textwidth]{Versuchsdaten/10/004-dunkel.jpg}}
-	\subcaptionbox{Dunkelfeldaufnahme mit Reflex (022\label{dunkel022}}
+	\subcaptionbox{Dunkelfeldaufnahme \\Reflex (022)\label{dunkel022}}
 	[.32\linewidth]{\includegraphics[width=0.32\textwidth]{Versuchsdaten/10/022-dunkel.jpg}}
 	\caption{Aufnahmen der InGaAs Quantentröge} \label{dunkelhell}
 \end{figure}
@@ -107,18 +130,8 @@ Zudem liegt der Reflex (022) in diesem Fall ebenfalls auf dem Lauekreis. Indem m
 Zum Vergleich ist in Abb. \ref{hell} eine Hellfeldaufnahme der Probenstelle zu sehen. In den Abb. \ref{dunkel004} und \ref{dunkel022} sind zwei Dunkelfeldaufnahmen zu sehen, die mit unterschiedlichen Reflexen erstellt wurden. \\
 In der Hellfeldaufnahme sind die InGaAs Quantentröge nicht sehr gut von dem umgebenen GaAs zu unterscheiden. Hierbei bieten die Dunkelfeldaufnahmen Vorteile. Da InGaAs eine andere Gitterkonstante besitzt als GaAs, sind die Reflexe nicht am gleichen Ort im Beugungsbild, sodass die InGaAs Schichten deutlich dunkler im Bild zu sehen sind. Dieser Effekt ist sowohl beim Reflex (022) als auch beim Reflex (004) zu erkennen. \\
 Es sind außerdem Bereiche auf den Dunkelfeldaufnahmen zu sehen, die ebenfalls dunkel erscheinen und keine Einzelheiten mehr erkennen lassen. Dies könnten Bereiche sein, in denen die Probe eine unterschiedliche Kristallorientierung besitzen und dadurch der jeweilige Reflex verschoben oder schwächer ausgeprägt ist. \\
+In Abb. \ref{trogdunkel} im Anhang sind (020) Dunkelfeldaufnahmen der InGaAs-Quantentröge zu sehen. Da die InGaAs-Schichten den Reflex (020) nicht am gleichen Ort, wie GaAs besitzt, erscheinen die Quantentröge mit einer sehr viel schwächeren Intensität, sodass sie schwarz aussehen.
 
-\begin{figure}[htb]\centering
-	\subcaptionbox{34000-fache Vergrößerung\label{34k}}
-	[.49\linewidth]{\includegraphics[width=0.49\textwidth]{Versuchsdaten/11/34000x.jpg}}
-	\subcaptionbox{87000-fache Vergrößerung\label{87k}}
-	[.49\linewidth]{\includegraphics[width=0.49\textwidth]{Versuchsdaten/11/87000x.jpg}}\\
-	\subcaptionbox{185000-fache Vergrößerung\label{185k}}
-	[.49\linewidth]{\includegraphics[width=0.49\textwidth]{Versuchsdaten/11/185000x.jpg}}
-	\subcaptionbox{380000-fache Vergrößerung\label{380k}}
-	[.49\linewidth]{\includegraphics[width=0.49\textwidth]{Versuchsdaten/11/380000x.jpg}}
-	\caption{(020) Dunkelfeldaufnahmen der InGaAs-Quantentröge mit unterschiedlichen Vergrößerungen} \label{*}
-\end{figure}
 
 \begin{figure}[htb]\centering
 	\subcaptionbox{34000-fache Vergrößerung\label{34kaus}}
@@ -129,11 +142,68 @@ Es sind außerdem Bereiche auf den Dunkelfeldaufnahmen zu sehen, die ebenfalls d
 	[.49\linewidth]{\includegraphics[width=0.49\textwidth]{Versuchsdaten/11/185000xausschnitt.png}}
 	\subcaptionbox{380000-fache Vergrößerung\label{380kaus}}
 	[.49\linewidth]{\includegraphics[width=0.49\textwidth]{Versuchsdaten/11/380000xausschnitt.png}}
-	\caption{Indiumgehalt der Ausschnitte im Querschnitt} \label{ausschnitte}
+	\caption{Indiumgehalt der Ausschnitte im Querschnitt} \label{indprofil}
 \end{figure}
+
+Aus den Aufnahmen in Abb. \ref{trogdunkel} sind Intensitätsprofile über den Querschnitt senkrecht zu den Quantentrögen erstellt worden. Da die Intensität vom Indiumgehalt abhängt, konnte der Indiumgehalt über dem Querschnitt dargestellt werden. Die Ergebnisse sind in Abb. \ref{indprofil} dargestellt. \\
+Außerhalb der Quantentröge wurde hierfür der Indium Gehalt innerhalb der GaAs-Schichten als 0 angenommen. Auf diesen Intensitätswert wurde der Rest des Intensitätprofils normiert. Da die Intensiät quadratisch vom (020) Strukturfaktor abhängt, konnte aus dem Strukturfaktor $F$ abhängig vom Indiumgehalt $x$ der Indiumgehalt in Abhängigkeit von der Intensität $I$ besitmmt werden. Aus der gegebenen Abhängigkeit wurde abgelesen:
+\begin{align*}
+	F = 0,95x - 0,15 \\
+	I = F^2 = (0,95x - 0,15)^2 
+\end{align*}
+
+Die Intensität besitzt also bei keinem Indiumgehalt den Wert 0,0225. Da das Intensitätsprofil auf diese Stelle normiert wurde, wird auch die Intensität normiert und nach x umgestellt:
+
+\begin{align*}
+	I_{norm} = (0,95x - 0,15)^2 / 0,0225 \\
+	x = \frac{0,15-\sqrt{I_{norm}\cdot 0,0225}}{0,95}
+\end{align*}
+
+Mit dieser Gleichung konnten die normierten Intensitätsprofile zu Indiumgehaltsprofilen umgerechnet werden. Die Quadratfunktion hat zwei Lösungen, von der die Negative verwendet werden muss, damit bei einer normierten Intensität von 1 der Indiumgehalt 0 wird. \\
+Zuletzt wurde der Indiumgehalt zusätzlich mithilfe eines Hochauflösungs-TEM Bildes bestimmt. Hierbei wurde keine Dunkelfeldaufnahme verwendet, um die Intensitäten zu bestimmen, sondern stattdessen die Gitterkonstanten aus den Atomabständen bestimmt. Aus der Abhängigkeit der Gitterkonstante $a$ vom Indiumgehalt, konnte der Indiumgehalt von der Gitterkonstante abhängig gemacht werden. \\
+Das Hochauflösungs-TEM Bild ist in Abb. \ref{hochtem} im Anhang zu sehen. Da im Versuch selbst kein verwendbares Hochauflösungsbild erstellt werden konnte, wurde ein passendes Ergebnis aus älteren Versuchen zur Verfügung gestellt. In Abb. \ref{filthoch} im Anhang wurden mit der DALI (Digital Analysis of Lattice Images) Software die Netzebenenabstände vermessen und daraus ein Profil der Gitterverzerrung durch den Quantentrog erstellt. \\
+Mit der gegebenen Abhängigkeit zwischen Gitterkonstante und Indiumgehalt konnte daraus mit folgender Umrechnung ein Profil des Indiumgehalts erstellt werden, welches in Abb. \ref{hochindium} dargestellt ist:
+
+\begin{align*}
+	(x-1) / 0.0718
+\end{align*}
+
+\begin{figure}[H]\centering
+	\includegraphics[width=0.9\textwidth]{Versuchsdaten/13/Graph01.png}
+\caption{Profil des Indiumgehaltes, bestimmt durch die Gitterverzerrung}
+\label{hochindium}
+\end{figure}
+
+Da es sich hierbei jedoch um eine andere im Vorfeld untersuchte Probe handelt, können die Ergebnisse nicht direkt miteinander verglichen werden. Der Vorteil der Gitterverzerrungs-Methode liegt allerdings darin, dass dank der höheren Auflösung die Grenzen des Quantentroges deutlich genauer zu bestimmen sind. \\
+Die Fehlerbereiche der Gitterverzerrungsmethode konnten eingezeichnet werden und sind somit ersichtlich. Im Falle der Intensitäts-Methode gibt es auf den Profilen allerdings so viele Messpunkte, dass eine Darstellung der Fehlerbereiche nicht gut möglich ist. Die Fehler bewegen sich allerdings im Bereich von $\pm0,01$ bis $\pm0,02$. Hier ist allerdings eine große Unsicherheit noch nicht beachtet, da nicht fest steht, wie groß der minimale Indiumgehalt auf der Probe tatsächlich ist und durch welche andere Faktoren, wie Proben Unreinheit der Intensitätsverlauf zudem beeinflusst wird.
+
 
 \section{Zusammenfassung}
 
+In diesem Versuch konnte die Handhabung des TEM geübt und verschiedene Beugungsbilder von einer Probe gemacht werden. Durch die gezielte Drehung der Probe war es zudem möglich, Dunkelfeldaufnahmen mit den gewünschten Reflexen aufzunehmen. Beim Vergleich konnte hierbei festegestellt werden, dass Dunkelfeldaufnahmen unter bestimmten Voraussetzungen gezielt Kontraste verstärken können, sodass in diesem Fall die InGaAs-Quantentröge hervorgehoben werden konnten.
+Zum Schluss konnte ein Indiumkonzentrations-Profil der Probe berechnet werden, auf dem der Verlauf um die Quantentröge herum gut sichtbar war. Hierbei wurde bestätigt, dass die Konzentrationsmessung sowohl mit der Intensität in einer Dunkelfeldaufnahme, als auch mit der Gitterverzerrung in einem Hochauflösungs-TEM Bild möglich ist. Auch die Genauigkeit ist aufgrund verschiedener Fehlerquellen bei beiden Methoden sehr ähnlich. Durch weitere Optimierung sollte, die Gitterverzerrungs-Methode allerdings eine deutlichere Zuordnung der Konzentrationen zu den Stellen auf dem Profil möglich sein, da eine höhere Auflösung als in den verwendeten Dunkelfeldbildern vorliegt. 
+
+
 \section*{Anhang}
+
+\begin{figure}[htb]\centering
+	\subcaptionbox{34000-fache Vergrößerung\label{34k}}
+	[.49\linewidth]{\includegraphics[width=0.49\textwidth]{Versuchsdaten/11/34000x.jpg}}
+	\subcaptionbox{87000-fache Vergrößerung\label{87k}}
+	[.49\linewidth]{\includegraphics[width=0.49\textwidth]{Versuchsdaten/11/87000x.jpg}}\\
+	\subcaptionbox{185000-fache Vergrößerung\label{185k}}
+	[.49\linewidth]{\includegraphics[width=0.49\textwidth]{Versuchsdaten/11/185000x.jpg}}
+	\subcaptionbox{380000-fache Vergrößerung\label{380k}}
+	[.49\linewidth]{\includegraphics[width=0.49\textwidth]{Versuchsdaten/11/380000x.jpg}}
+	\caption{(020) Dunkelfeldaufnahmen der InGaAs-Quantentröge mit unterschiedlichen Vergrößerungen} \label{trogdunkel}
+\end{figure}
+
+\begin{figure}[htb]\centering
+	\subcaptionbox{Hochauflösungs-TEM Bild\label{hochtem}}
+	[.49\linewidth]{\includegraphics[width=0.49\textwidth]{Versuchsdaten/13/good_data/Frame3.jpg}}
+	\subcaptionbox{Gefiltertes Bild zur Bestimmung von der Gitterkonstante\label{filthoch}}
+	[.49\linewidth]{\includegraphics[width=0.49\textwidth]{Versuchsdaten/13/good_data/Frame3_rotated_and_filtered.jpg}}\\
+	\caption{Hochauflösungs-TEM Bilder von InGaAs-Quantentrögen} \label{hoch}
+\end{figure}
 
 \end{document}
